<?xml version="1.0"?>
<package format="2">
  <name>optical_flow</name>
  <version>0.1.0</version>
  <description>Optical flow using machine vision cameras</description>

  <maintainer email="alexander.kazeka@gmail.com">Alexander Kazeka</maintainer>

  <license>http://uvr.su</license>

  <author email="alexander.kazeka@gmail.com">Alexander Kazeka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
